working on patient controller
